Fix info screen on mobile

--- a/css/onenanohost.webflow.css
+++ b/css/onenanohost.webflow.css
@@ -353,8 +353,7 @@ h2 {
 
 .links.links-tag {
   display: inline-block;
-  margin-right: 5px;
-  margin-left: 5px;
+  margin: 5px;
   padding: 5px 10px;
   border-radius: 20px;
   background-color: #4a90e2;
@@ -394,10 +393,10 @@ h2 {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100px;
+  height: 100%;
   margin-top: 0px;
   margin-bottom: 20px;
-  padding-left: 20px;
+  padding: 20px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
